# langgraph-AIops-Azure

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  simple_eval.py
infra/: deploy-simple.bicep  deploy-with-existing-aoai.bicep  main-gpt41.bicep  main.bicep  main.bicepparam
infra/otel/: otel-collector-config.yaml
infra/servicebus/: Config.json
scripts/: agent_eval_deploy.py  check_region_availability.py  deploy.py  deploy_to_azure.py
src/langgraph_agent/: __init__.py  __main__.py  config.py  main.py  models.py  server.py  workflow.py
src/langgraph_agent/static/: index.html
src/langgraph_agent_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/evaluation/: __init__.py  check_thresholds.py  run_evaluation.py  test_agent_behavior.py  test_cases.jsonl
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_deploy.py  test_workflow.py
